usando una api de datos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/css/stilos.css">
   </head>
   <body>
 
@@ -17,6 +18,8 @@
              </p>
          </section>
        </main>
+
+          <%- include('partials/tablas')%>
        <script src="src/index.js"></script>
   </body>
 </html>
