mejorando los estilos

--- a/src/views/partials/tablas.ejs
+++ b/src/views/partials/tablas.ejs
@@ -1,14 +1,14 @@
-<div class="position-relative " style="height: 1px;">
-  <table class="table position-absolute  top-60 " class="tablas">
+<div class="container mt-0">
+  <table class="table table-bordered">
     <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">titulos</th>
+      <tr class="text-center table-dark">
+        <th>#</th>
+        <th>titulos</th>
       </tr>
     </thead>
-    <tbody id="cuerpoDeLaTabala">
-         <th scope="row"  id=""></th>
-    </tbody>
-  </table>
 
+    <tbody id="cuerpoDeLaTabala" class="text-sm-center">
+    </tbody>
+
+  </table>
 </div>
