--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,6 +11,14 @@
 
      <%-  include('partials/navegacion')%>
 
+<div class="position-relative">
+  <img src="img/pexels-suket-dedhia-671658.jpg" class="img-fluid " alt="" >
+  <a href="/contacto"  class="btn btn-dark  w-25  position-absolute bottom-0 start-0 translate-middl-y ">contacto</a>  
+  <a href="/principal" class="btn btn-dark   w-25  position-absolute bottom-0 start-0 translate-middl-y ">principal</a>
+
+</div>
+
+
        <main class="vh-100 container pt-2 text-center d-flex justify-content-center align-items-center">
          <section>
            <h1 class="dispay-1">Bienvenido</h1>
@@ -18,6 +26,11 @@
              </p>
          </section>
        </main>
+
+
+     <h1 class="text-sm-center m-1 p-4 text-capitalize">tablas de titulos</h1>
+
+
 
           <%- include('partials/tablas')%>
        <script src="src/index.js"></script>
